# apex_core

./: README.md  TODO.md  pyproject.toml
src/: Makefile
src/apps/landing/: admin.py  apps.py  models.py  service.py  urls.py  utils.py  views.py
src/apps/landing/migrations/: 0001_initial.py
src/apps/module/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py
src/apps/module/management/commands/: default_modules.py
src/apps/module/migrations/: 0001_initial.py  0002_moduleprice.py  0003_alter_module_options_alter_moduleprice_options_and_more.py
src/apps/orders/: admin.py  forms.py  models.py  service.py  urls.py  views.py
src/apps/orders/migrations/: 0001_initial.py  0002_orders_order_status.py
src/apps/payments/: admin.py  models.py
src/apps/payments/migrations/: 0001_initial.py
src/apps/tenants/: admin.py  apps.py  models.py
src/apps/tenants/migrations/: 0001_initial.py  0002_tenantmodules.py  0003_alter_tenantmodules_options_alter_tenants_options_and_more.py
src/apps/users/: admin.py  forms.py  models.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py  0002_alter_users_managers.py  0003_alter_users_managers.py  0004_users_groups_users_is_superuser_and_more.py  0005_alter_users_options_alter_users_table.py
src/core/: settings.py  softdelete.py  urls.py
src/static/css/: style.css
src/static/js/: script.js
src/templates/: base.html  landing.html  login.html  order.html  profile.html  register.html
