[project]
name = "apex-core"
version = "0.1.0"
description = "Core application for apexERP to manage tenants"
authors = [
    {name = "Asilbek",email = "englishisakovich@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-debug-toolbar (>=6.3.0,<7.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "faker (>=40.19.1,<41.0.0)",
    "django-jazzmin (>=3.0.4,<4.0.0)",
    "user-agents (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
